builded documentation part 1
